# atg-omeka-addons

./: README.md  TODO.md  Untitled.ipynb  all_plugin_info.yml  all_plugins_info.yml  all_themes_info.yml  plugins.md  plugins.yml  pyproject.toml  refresh_cache.py  requirements.txt  themes.yml  update.py  update_all_plugin_info.ipynb  update_cache.py  update_info.py  update_plugins_md.py  validate_changed_addons.ipynb  validate_changed_plugins.ipynb
ExhibitBuilder/languages/: it.po
all_addon_info/: README.md  all_plugins_info.yml
plugins/Commenting/languages/: es.po
plugins/Contribution/languages/: fi_FI.po
plugins/EileenSouthern/: EileenSouthernPlugin.php  README.md  plugin.ini
plugins/EileenSouthern/views/shared/exhibit_layouts/southern/: layout.php
plugins/GDriveLinks/: plugin.ini
plugins/HonorThyLibrarians/languages/: it.po
plugins/IiifItems/libraries/IiifItems/: IiifUtil.php
plugins/IiifItems/libraries/IiifItems/Util/: Canvas.php  Manifest.php
plugins/ItemDuplicator/: README.md
plugins/ItemRelations/languages/: ja.po  ru.po
plugins/Neatline/controllers/: RecordsController.php
plugins/PublicEditLink/: PublicEditLinkPlugin.php  README.md  plugin.ini
plugins/ReassignFiles/: README.md  ReassignFilesPlugin.php  config_form.php  plugin.ini
plugins/ReassignFiles/languages/: template.pot
plugins/ReassignFiles/views/admin/index/: index.php
plugins/ReassignFiles/views/admin/javascripts/: ReassignFiles.js
plugins/UserProfiles/languages/: et.po
plugins/UserProfiles/views/public/javascripts/: elements.js
