[tool.poetry]
name = "atg-omeka-addons"
version = "1.0.0"
description = "Cache of available plugins for Omeka as a Service at Harvard"
authors = ["Jeremy Guillette <jeremy_guillette@harvard.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
PyYAML = "^6.0"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
